--- a/index.html
+++ b/index.html
@@ -44,27 +44,24 @@
                 </div>
             </nav>
         </div>
-        <header class="image-container">
-            <p>
-            <h1>Adrenaline Picker</h1>
-            </p>
-            <h6></h6>
-            <p>
-            <h6>Are you tired of daily routine? Are you looking for some new experience or new life approach? We are
-                here for you!
-            </h6>
-            </p>
-            <p>
-            <h6>Join our three-level complexity Adrenaline Picker program, choose one and embrace the world full of
-                fascinating adventures.</h6>
-            </p>
-            <p>
-            <h4>Future is now.</h4>
-            </p>
+        <header
+            class="top-image-container d-flex display-column min-vh-100 align-items-center justify-content-center text-center m-5">
+            <div class="col">
+                <h1>Adrenaline Picker</h1>
+                <h6></h6>
+                <h6>Are you tired of daily routine? Are you looking for some new experience or new life approach? We are
+                    here for you!
+                </h6>
+                <h6>Join our three-level complexity Adrenaline Picker program, choose one and embrace the world full of
+                    fascinating adventures.</h6>
+
+                <h4>Future is now.</h4>
+            </div>
         </header>
 
-        <div class="row all-carousels-row mx-sm-0 mx-md-3 mx-lg-5 mx-xl-5 px-sm-0 px-md-3 px-lg-5 px-xl-5">
-            <div class="col mx-5 px-5">
+        <div
+            class="row all-carousels-row mx-sm-0 mx-md-3 mx-lg-5 mx-xl-5 px-sm-0 px-md-3 px-lg-5 px-xl-5 d-flex justify-content-center">
+            <div class="col-xxl-9 col-xl-9 col-lg-9 col-md-12 col-sm-12">
                 <div class="card mt-5 p-0 carousel-1-and-description-card">
                     <div id="carouselExampleIndicators" class="carousel slide card-img-top" data-bs-ride="carousel">
                         <div class="carousel-indicators">
@@ -74,17 +71,30 @@
                                 aria-label="Slide 2"></button>
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                                 aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                                aria-label="Slide 4"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                                aria-label="Slide 5"></button>
                         </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./images/low_adrenaline_adventure/136.jpg" class="d-block w-100" alt="Canada">
+                                <img src="./Images/low_adrenaline_adventure/gYnm1l.jpg" class="d-block w-100"
+                                    alt="Canada">
                             </div>
                             <div class="carousel-item">
-                                <img src="./images/no bildes/green-island-beach-background-1920x600-275.jpg"
-                                    class="d-block w-100" alt="Oceania">
+                                <img src="./images/low_adrenaline_adventure/u3.jpg" class="d-block w-100" alt="Oceania">
                             </div>
                             <div class="carousel-item">
-                                <img src="./Images/no bildes/oceania.jpg" class="d-block w-100" alt="Switzerland">
+                                <img src="./images/low_adrenaline_adventure/2521984197.jpg" class="d-block w-100"
+                                    alt="Oceania">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./images/low_adrenaline_adventure/136.jpg" class="d-block w-100"
+                                    alt="Switzerland">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./Images/low_adrenaline_adventure/scorpio.jpg" class="d-block w-100"
+                                    alt="Switzerland">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -103,11 +113,11 @@
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional
                             content. This content is a little bit longer.</p>
-                        <a href="#" class="btn btn-primary">Price</a>
+                        <a href="./pricing.html" class="btn btn-primary">Price</a>
                     </div>
                 </div>
-                <div class="card mt-5 p-0 carousel-1-and-description-card">
-                    <div id="carouselExampleIndicators" class="carousel slide card-img-top" data-bs-ride="carousel">
+                <div class="card mt-5 p-0 carousel-2-and-description-card">
+                    <div id="carouselExampleIndicators2" class="carousel slide card-img-top" data-bs-ride="carousel2">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                                 class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -118,22 +128,23 @@
                         </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./images/no bildes/2461292.jpg" class="d-block w-100" alt="Canada">
+                                <img src="./images/medium_adventure/3ZT0dn.jpg" class="d-block w-100" alt="Canada">
                             </div>
                             <div class="carousel-item">
-                                <img src="./images/no bildes/green-island-beach-background-1920x600-275.jpg"
-                                    class="d-block w-100" alt="Oceania">
+                                <img src="./images/medium_adventure/1535386447article_img.jpg" class="d-block w-100"
+                                    alt="Oceania">
                             </div>
                             <div class="carousel-item">
-                                <img src="./Images/no bildes/oceania.jpg" class="d-block w-100" alt="Switzerland">
+                                <img src="./images/medium_adventure/e77cc9e9-4f19db24df92ac01fb9e47786a2af831.jpg"
+                                    class="d-block w-100" alt="Switzerland">
                             </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2"
                             data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators2"
                             data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
@@ -144,11 +155,11 @@
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional
                             content. This content is a little bit longer.</p>
-                        <a href="#" class="btn btn-primary">Price</a>
+                        <a href="./pricing.html" class="btn btn-primary">Price</a>
                     </div>
                 </div>
-                <div class="card mt-5 p-0 carousel-1-and-description-card">
-                    <div id="carouselExampleIndicators" class="carousel slide card-img-top" data-bs-ride="carousel">
+                <div class="card mt-5 p-0 carousel-3-and-description-card">
+                    <div id="carouselExampleIndicators3" class="carousel slide card-img-top" data-bs-ride="carousel3">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                                 class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -156,25 +167,38 @@
                                 aria-label="Slide 2"></button>
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                                 aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                                aria-label="Slide 4"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                                aria-label="Slide 5"></button>
                         </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./images/no bildes/2461292.jpg" class="d-block w-100" alt="Canada">
+                                <img src="./images/extreme_adventure/maxresdefault.jpg" class="d-block w-100"
+                                    alt="Canada">
                             </div>
                             <div class="carousel-item">
-                                <img src="./images/no bildes/green-island-beach-background-1920x600-275.jpg"
-                                    class="d-block w-100" alt="Oceania">
+                                <img src="./images/extreme_adventure/96.jpg" class="d-block w-100" alt="Oceania">
                             </div>
                             <div class="carousel-item">
-                                <img src="./Images/no bildes/oceania.jpg" class="d-block w-100" alt="Switzerland">
+                                <img src="./images/extreme_adventure/swimming-with-sharks_3-1024x576.jpg"
+                                    class="d-block w-100" alt="Switzerland">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./images/extreme_adventure/i287104489239967221._szw1280h1280_.jpg"
+                                    class="d-block w-100" alt="Switzerland">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./images/extreme_adventure/171813.jpg" class="d-block w-100"
+                                    alt="Switzerland">
                             </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators3"
                             data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators3"
                             data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
@@ -185,7 +209,7 @@
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional
                             content. This content is a little bit longer.</p>
-                        <a href="#" class="btn btn-primary">Price</a>
+                        <a href="./pricing.html" class="btn btn-primary">Price</a>
                     </div>
                 </div>
             </div>
