--- a/pricing.html
+++ b/pricing.html
@@ -89,7 +89,7 @@
                         </div>
                     </div>
                 </div>
-                <h1 class="fw-normal mt-5">Heavy Adventure</h1>
+                <h1 class="fw-normal mt-5">Medium Adventure</h1>
                 <p class="mb-4 px-4">Quickly built and effective pricing table for your potential customer with this
                     Bootstrap
                     example. It's built with Bootstrap default components and utilities with little customization.</p>
