--- a/pricing.html
+++ b/pricing.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container-fluid d-flex flex-column min-vh-100">
+    <div class="container-fluid d-flex flex-column min-vh-100 p-0">
         <div class="row logo-row">
             <nav class="navbar navbar-expand-lg navbar-dark py-0">
                 <div class="container-fluid">
