top text upgrade

--- a/index.html
+++ b/index.html
@@ -46,16 +46,18 @@
         </div>
         <header
             class="top-image-container d-flex display-column min-vh-100 align-items-center justify-content-center text-center m-5">
-            <div class="col">
+            <div class="col lh-lg">
                 <h1>Adrenaline Picker</h1>
-                <h6></h6>
-                <h6>Are you tired of daily routine? Are you looking for some new experience or new life approach? We are
-                    here for you!
+                
+                <h6 class="fs-5">Are you tired of daily routine? </h6>
+                <h6 class="fs-5">Are you looking for some new experience or new life approach?</h6>  
+                    <h6 class="fs-5">We are here for you!</h6>
                 </h6>
-                <h6>Join our three-level complexity Adrenaline Picker program, choose one and embrace the world full of
+                <h6 class="fs-5">Join our three-level complexity Adrenaline Picker program, </h6>
+                   <h6 class="fs-5"> choose one and embrace the world full of
                     fascinating adventures.</h6>
 
-                <h4>Future is now.</h4>
+                <h4 class="fs-3">Future is now.</h4>
             </div>
         </header>
 
